--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,71 +1,86 @@
-<div class="container">
-  <div id="header" class="col-md-12">
-<h2>Welcome to Eat-Da-Burger!</h2>
+<!--start of the video-->
+<video autoplay loop>
+  <source src="http://whirlwindproduction.com/Misc2/flames_high.mp4" type="video/mp4">
+  <source src="http://whirlwindproduction.com/Misc2/flames.mp4" type="video/mp4">
+</video>
 
-<h2>Make a Burger of your Dreams and then Devour it!</h2>
+<!--container start -->
+<div class="container">
+
+  <!--Top header section -->
+  <div class = "row justify-content-md-center">
+    <div id="header" class="col-md-12">
+      <h2>Welcome to Eat-Da-Burger!</h2>
+      <img src = "../assets/img/burger.jpg" alt = "Tasty Burger" class = "burger-image">
+      <h3>Make a Burger of your Dreams and then Devour it!</h3>
+    </div>
   </div>
+  <!--End of Row-->
+
 
   <!--NEW ROW CENTERED COLUMNS-->
-<div class="row justify-content-md-center">
-  <div class="col-lg-2"></div>
-<div class="col-lg-8">
-<h2 class="text-center">Add a Burger</h2>
-<form class="create-update-form" action="burgers/create" method="POST">
+  <div class="row justify-content-md-center">
+    <div class="col-lg-2"></div>
+    <div class="col-lg-8">
+      <h2 class="text-center">Add a Burger</h2>
+      <form class="create-update-form" action="burgers/create" method="POST">
 
-  <div class="form-group">
-    <label for="ca">Burger Name :</label>
-    <input type="text" id="ca" name="burger_name">
-  </div>
-  <button type="submit">Add Your Tasty Burger</button>
-</div>
-<div class="col-lg-2"></div>
-</div>
-</form>
+        <div class="form-group">
+          <label for="ca">Burger Name :</label>
+          <input type="text" id="ca" name="burger_name">
+        </div>
+        <button type="submit">Add Your Tasty Burger</button>
+      </div>
+      <div class="col-lg-2"></div>
+    </div>
+  </form>
 
 
   <div class="row justify-content-md-center">
-   <div class="col col-lg-2">
-     
-   </div>
+    <div class="col col-lg-2">
+
+    </div>
+    <div class="col col-lg-4" id="burgerDisplayDiv">
+      <ul>
+        {{#each burgers}}
+        {{#unless this.devoured}}
+        <li>
+          {{this.burger_name}}
+
+          <form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
+            <input type="hidden" name="devoured" value="true">
+            <button type="submit">Devour It!</button>
+          </form>
+        </li>
+        {{/unless}}
+        {{/each}}
+      </ul>
+    </div>
+
     <div class="col col-lg-4">
-<ul>
-  {{#each burgers}}
-    {{#unless this.devoured}}
-      <li>
-        {{this.burger_name}}
+      <div id="devoured">
+      <h2>Burgers You Devoured!</h2>
 
-        <form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="devoured" value="true">
-          <button type="submit">Devour It!</button>
-        </form>
-      </li>
-    {{/unless}}
-  {{/each}}
-</ul>
+      <ul>
+        {{#each burgers}}
+        {{#if this.devoured}}
+        <li>
+          {{this.burger_name}}
+
+          <form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
+            <input type="hidden" name="devoured" value="false">
+            <!--<button type="submit">Devour!</button>-->
+          </form>
+        </li>
+        {{/if}}
+        {{/each}}
+      </ul>
+      </div>
+    </div>
+    <div class="col-lg-2"></div>
+
+
   </div>
-
-<div class="col col-lg-4">
-<h2>Burgers Yor Devoured!</h2>
-
-<ul>
-  {{#each burgers}}
-    {{#if this.devoured}}
-      <li>
-        {{this.burger_name}}
-
-        <form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
-          <input type="hidden" name="devoured" value="false">
-          <!--<button type="submit">Devour!</button>-->
-        </form>
-      </li>
-    {{/if}}
-  {{/each}}
-</ul>
-</div>
-<div class="col-lg-2"></div>
-
-
-</div>
-<!--end of row-->
+  <!--end of row-->
 </div>
 <!--end of container-->
